fix: spacings

--- a/src/ui/Button/button.module.scss
+++ b/src/ui/Button/button.module.scss
@@ -1,9 +1,9 @@
 .button {
   cursor: pointer;
-  padding: 16px 48px;
+  padding: $s16 $s48;
   text-align: center;
   font-size: 18px;
-  line-height: 24px;
+  line-height: $s24;
   font-weight: 700;
   border: none;
   transition: all 0.3s linear;
